Bug fixed when replay: (z-index of viewer)

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
 }
+
 #final {
     display: none;
 }
+
 #container {
     width: 800px;
 }
@@ -29,6 +31,7 @@ body {
     height: 36px;
     background-color: rgba(0, 128, 0, 0.459);
     border-radius: 18px;
+    z-index: 0;
 }
 
 .wasp {
@@ -41,6 +44,7 @@ body {
     background-size: 200%;
     background-position-x: center;
     background-position-y: center;
+    z-index: 1000;
 }
 
 .bee {
@@ -53,9 +57,10 @@ body {
     background-size: 80%;
     background-position-x: center;
     background-position-y: center;
+    z-index: 1000;
 }
 
-#control-panel{
+#control-panel {
     height: 50px;
     display: flex;
     justify-content: space-around;
@@ -64,14 +69,16 @@ body {
     color: #fff;
 }
 
-#control-panel button{
+#control-panel button {
     border-radius: 10px;
     padding: 5px;
     border: 0;
     cursor: pointer;
 }
 
-#killed-wasps, #killed-bees, #seconds {
+#killed-wasps,
+#killed-bees,
+#seconds {
     font-size: 26px;
     padding-left: 5px;
 }
@@ -82,8 +89,7 @@ body {
     width: 30px;
 }
 
-#playground {
-}
+#playground {}
 
 .layout {
     width: 800px;
